Fix overflow issue?
Maybe this will force the css to update...

--- a/studiohow-prototype/stylesheet.css
+++ b/studiohow-prototype/stylesheet.css
@@ -468,6 +468,8 @@ a:visited {
 	width:200vmin;
 	margin-left:calc(50vw - 100vmin);
 
+	overflow-y:hidden;
+	overflow-x:hidden;
 }
 
 .ring2 img {
